# envintegration

./: .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
digital_hygiene/: test.py  train.py
digital_hygiene/feedrecsys/data/: __init__.py  base.py  behaviour.py  news.py  user.py
digital_hygiene/feedrecsys/metrics/: __init__.py  dcg.py  ndcg.py
digital_hygiene/feedrecsys/models/: __init__.py  nrms.py
digital_hygiene/feedrecsys/models/common/: __init__.py  attention.py
digital_hygiene/feedrecsys/utils/: __init__.py  parse.py  transform.py
docs/source/: about.rst  conf.py  contribution.rst  faq.rst  index.rst
docs/source/envintegration/: envintegration.rst  index.rst  installation.rst  quickstart.rst
env_manage/: __init__.py
env_manage/yandex/: __init__.py  api.py
env_manage/yandex/capabilities/: __init__.py  capabilities.py
env_manage/yandex/devices/: __init__.py  device_categories.py  devices.py  quasar.py
env_manage/yandex/selenium_quasar/: __init__.py  selenium_quasar.py
hygiene/: __init__.py  api.py
hygiene/digital_hygiene/: __init__.py  api.py  main.py  test.py  train.py
hygiene/digital_hygiene/feedrecsys/data/: __init__.py  base.py  behaviour.py  news.py  user.py
hygiene/digital_hygiene/feedrecsys/metrics/: __init__.py  mrr.py
hygiene/digital_hygiene/feedrecsys/models/: __init__.py  nrms.py
hygiene/digital_hygiene/feedrecsys/models/common/: __init__.py  attention.py  dot.py
hygiene/digital_hygiene/feedrecsys/utils/: __init__.py  checkpoint.py  embed.py
hygiene/physical_hygiene/: __init__.py  api.py
hygiene/physical_hygiene/device_mode/: __init__.py  stress_recommendations.py
hygiene/physical_hygiene/light_mode/: __init__.py  light_mode.py
hygiene/physical_hygiene/ml_components/: __init__.py  ml.py
hygiene/physical_hygiene/ml_components/models/: LabelEncoderPhases.p  column_transformer_phases.p  column_transformer_sleep.pkl  model_sleep.pkl
pes_digenv/: __init__.py
pes_digenv/text_emotion/: __init__.py  api.py
pes_digenv/text_emotion/emotion/: __init__.py  emotion_detect.py
pes_digenv/text_emotion/models/: mats.txt
pes_digenv/text_emotion/models/emotion-detection/: config.json  tokenizer.json  tokenizer_config.json
pes_digenv/text_emotion/models/insult_bert/: config.json
pes_digenv/text_emotion/models/threat_bert/: tokenizer_config.json
pes_digenv/text_emotion/toxic/: __init__.py  bert_predict.py  mat_filter.py  morph.py  porter_stem.py  small_talk.py
pes_env/: __init__.py
pes_env/google/: API.py  __init__.py  api.py  dict.py  fit.py  handlers.py  types.py  utils.py
physical_hygiene/: __init__.py
physical_hygiene/device_mode/: stress_recommendations.py  stress_reduction.py
physical_hygiene/light_mode/: light_mode.py
tests/unit/env_manage/: test_YandexApi.py
tests/unit/pes_digenv/: test_TextEmotionApi.py
