[project]
name = "envintegration"
version = "0.1.0"
description = "Integration of the external environment of users into the ecosystem of their digital assistants"
authors = [
    { name = "Denis Kuznetsov", email = "wvxp@mail.ru" },
    { name = "Danila Korobkov", email = "danila.korobkov@yandex.ru" },
    { name = "Andrew Laptev", email = "nickname.avast@gmail.com" },
    { name = "Timur Samigulin", email = "timursamigulin98@gmail.com" },
    { name = "Valery Volokha", email = "valierii.volokha@gmail.com" },
]
dependencies = [
    "aiohttp~=3.8.3",
    "requests~=2.28.2",
    "python-dotenv~=0.21.1",
    "pymorphy2~=0.9.1",
    "torch~=1.13.1",
    "torchvision~=0.14.1",
    "torchaudio~=0.13.1",
    "transformers~=4.26.1",
    "gdown~=4.6.3",
    "selenium>=4.8.2",
    "chardet>=5.1.0",
]
requires-python = "~=3.10.6"
readme = "README.md"
license = { text = "" }

[build-system]
requires = ["pdm-pep517~=1.1.2"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
tools = ["pip~=23.0", "pre-commit~=3.0.3"]
linters = [
    "flake8~=6.0.0",
    "black~=23.1.0",
    "isort~=5.12.0",
    "mypy~=1.0.0",
    "types-requests~=2.28.11.13",
]
security = ["bandit~=1.7.4"]
test = [
    "httpx~=0.23.3",
    "pytest~=7.2.1",
    "pytest-asyncio~=0.20.3",
    "pytest-randomly~=3.12.0",
    "pytest-cov~=4.0.0",
]

[tool.pdm.scripts]
post_install = "gdown https://drive.google.com/uc?id=1G6DBfLvrW_g_WlXJd-dFxNv9Zm8GrAVY -O pes_digenv/text_emotion/models/emotion-detection/"

[tool.black]
line-length = 80
verbose = 1
color = true

[tool.isort]
profile = "black"
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.mypy]
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymorphy2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"] #TODO почему-то это не работает

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --capture=tee-sys --cov --cov-report=html --cov-report=term"
log_cli = 1
log_cli_format = "%(asctime)s [%(levelname)8s] [%(name)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%H:%M:%S"
testpaths = "tests"
filterwarnings = "ignore::DeprecationWarning"
